# loaderine

./: CMakeLists.txt  README.md
basic_ldr/: CMakeLists.txt  buffered_dll_resolver.h  buffered_func_resolver.h  kernel32_detached.cpp  kernel32_detached.h  main.cpp  ntdll_detached.cpp  ntdll_detached.h  shellcodes.h
